"""Add records

Revision ID: 29cfbcb43c5c
Revises: c0c614d095d0
Create Date: 2022-05-04 18:54:07.975625

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '29cfbcb43c5c'
down_revision = 'c0c614d095d0'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        'records',
        sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
        sa.Column('amount', sa.Numeric(), nullable=False),
        sa.Column('description', sa.Unicode(), nullable=False),
        sa.Column('user_id', sa.Integer(), nullable=True),
        sa.Column('type', sa.Unicode(), nullable=False),
        sa.Column('category_id', sa.Integer(), nullable=True),
        sa.Column('removed', sa.Boolean(), nullable=True),
        sa.Column('created_by', sa.Integer(), nullable=False),
        sa.Column('updated_by', sa.Integer(), nullable=True),
        sa.Column('creation_date', sa.DateTime(), nullable=True),
        sa.Column('update_date', sa.DateTime(), nullable=True),
        sa.ForeignKeyConstraint(['category_id'], ['categories.id'], ),
        sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
        sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('records')
    # ### end Alembic commands ###
